Tue Mar 16 10:36:21 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* CIAO-INSTALL.html:

	  Added the support for CIDL with MPC on Linux.

2004-03-15  Venkita Subramonian  <venkita@harry.cs.wustl.edu>

	* docs/static_config_example.html:
	* docs/static_ciao_contents.html:
	* docs/static_ciao_toc.html:

	  Made some modifications to include an example run.

	* docs/index.html:

	  Added link from the CIAO main page to the static config
	  documentation.

Sun Mar 14 00:23:02 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* CCF/CCF/CIDL/CIDL.mpc:
	* CCF/CCF/IDL2/IDL2.mpc:
	* CCF/CCF/IDL3/IDL3.mpc:
	* CCF/CCF/CIDL/CodeGenerationKit.mpc:
	* CCF/CCF/CIDL/CompilerElements.mpc:

	  Removed the * to disable the duplicated words in the
	  project/makefile.

Sun Mar 14 00:16:46 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* CIDLC/CIDLC.mpc:

	  Removed the * to disable the duplicated words in the
	  project/makefile.

Mon Mar 15 10:14:16 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CIDLC/cidlc.cpp:

	  Temporary fix for the wrong return code in CIDL compiler.
	  Thanks to Gary Duzan <gduzan@bbn.com> for reporting this.

Fri Mar 12 11:03:38 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/TypeNameEmitter.cpp:
        * CIDLC/TypeNameEmitter.hpp:

          Added missing operations to generate enum type names. Thanks to
          Jessica Pistole <Jessica.Pistole@jhuapl.edu> for reporting
          the missing type names in generated servant glue code.

Thu Mar 11 16:30:45 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/CCF/IDL2/LexicalAnalyzer.cpp:
	* CCF/CCF/IDL2/Parser.cpp:
	* CCF/CCF/IDL2/Parser.hpp:
	* CCF/CCF/IDL2/SemanticAction/Typedef.hpp:
	* CCF/CCF/IDL2/SemanticAction/Impl/Typedef.cpp:
	* CCF/CCF/IDL2/SemanticAction/Impl/Typedef.hpp:

	  Added support for bounded string and wstring.

	* CCF/Documentation/TODO:

	  Reflected new achievement.

	* CIDLC/cidlc.cpp:

	  Cosmetic changes.

2004-03-11  Venkita Subramonian  <venkita@harry.cs.wustl.edu>
